manual fix of ?

--- a/TulaKaveriMahatyam.tex
+++ b/TulaKaveriMahatyam.tex
@@ -984,7 +984,7 @@
  दम्ष्ट्राकराळवदनैश्वभिर्दष्टाश्च मर्मसु।
  
 
-हाहेति चकृशु ?रम्यमदूतैःप्रपीडिताः।
+हाहेति चकृशुर्घोरम्यमदूतैःप्रपीडिताः।
  पापिष्टस्सततम्भूमौ परहिम्सापरायणाः।
  परनिन्दापरद्रव्य परद्रोहपरायणाः।
  निषिद्धकर्मनिरता: सदाचारविवर्जिताः।
@@ -4787,7 +4787,7 @@ ___एव देवश्शरणम् ममास्तु।
  वर्ततेंतर्हृदिस्थं तद्ध्यानं व्यवहरत्यजन्।
  65
 
-  इत्युक्तोप्यभवन् मौनी सो?न्मीलित लोचनः।
+  इत्युक्तोप्यभवन् मौनी सोर्धोन्मीलित लोचनः।
 
 कृष्णोब्रवीत्तदारामं वचनं स्वार्थसाधनम्।
  अहो ध्यानमहोध्यान महोध्यानम्महात्मनः।
