--- a/TulaKaveriMahatyam.tex
+++ b/TulaKaveriMahatyam.tex
@@ -36,7 +36,7 @@
 कुरुक्षेत्रे मुनीन्द्राणामग्रतो यदवर्णयत्।
 तत्तेहम् सम्प्रवक्ष्यामि शृणुष्व वहितोन्नृप।
 
-पुराऽयोध्यापतिश्रीमान् हरिश्चंद्र इति शृतः।
+पुराऽयोध्यापतिश्रीमान् हरिश्चन्द्र इति शृतः।
 कुरुक्षेत्रम् शुभक्षेत्रम् यजनार्थमवाप्तवान्।10
 
 तत्र स्थितान् महाभागान् शौणकादि मुनीश्वरान्।
@@ -210,7 +210,7 @@
 आसागरम् शिवक्षेत्रम् विष्णुक्षेत्राणिचान्तर।
 
 मुनीनामाश्रमा दिव्यास्सर्वसिद्धि विधायिनः।
-तप:प्रारम्भमात्रेण संपूर्णफलदान नृणाम्।65
+तपःप्रारम्भमात्रेण सम्पूर्णफलदान नृणाम्।65
 
 कावेरी महिमा केन वर्ण्यते युगकोटिभिः।
 विधिर्नारायणाच्छम्भो ऋते सत्यं जगत्त्रये,।
@@ -285,7 +285,7 @@
 सकृद्ध्यातोमहाराज भगवान्पुरुषोत्तमः।
 
 प्रसन्तोनिजसारूप्यम्कालभ्यन्ददाति वै।
-तस्माद्भप प्रकृतार्थस्त्वं सत्संगनिरतो भव।
+तस्माद्भप प्रकृतार्थस्त्वं सत्सङ्गनिरतो भव।
 
 सह्यजायास्तु माहात्म्यम्विस्तरेण ब्रवीमि ते।
 
@@ -437,7 +437,7 @@
 विधाय चासनंशुभ्रम्तन्मध्ये शुद्धमुन्नतम्।
 
 श्लक्ष्णम् मृदुमनोज्ञम्च सूक्ष्मवस्त्रोत्तरक्षतम्।
-तस्मिन्जितेन्द्रिययंशांतं जितक्रोधम्सदासुचिम्। 55
+तस्मिन्जितेन्द्रिययंशान्तं जितक्रोधम्सदासुचिम्। 55
 
 वेदवेदाङ्गतत्वज्ञम्वेदान्तश्रवणाद्भुतम्।
 धर्मशास्त्रप्रवक्तारम् पुराणेषु महामतिम्।
@@ -516,7 +516,7 @@
 ***************************
 अथ त्रितीयोऽध्यायः
 
-चंद्रकांताविद्यावळीरुपाख्यानम्।
+चन्द्रकान्ताविद्यावळीरुपाख्यानम्।
 
 अगस्त्य:
 
