--- a/TulaKaveriMahatyam.tex
+++ b/TulaKaveriMahatyam.tex
@@ -252,7 +252,7 @@
 का देवता च किम दानम् कथम् स्नानम् मुनीश्वराः।
 मम सर्वम विस्तरेण ब्रूत स्नानविधिम द्विजाः।
 
-इति श्री दाल्भ्यधर्मवर्मसम्बादे नारदागस्त्याभ्यां हरिश्चन्द्रप्रति कुरुक्षेत्रे तुलाकावेरि स्नानविधि कथनम् नाम प्रथमोऽध्यायः।
+इति श्री-दाल्भ्यधर्मवर्मसम्बादे नारदागस्त्याभ्यां हरिश्चन्द्रप्रति कुरुक्षेत्रे तुलाकावेरि स्नानविधि कथनम् नाम प्रथमोऽध्यायः।
 
 
 
@@ -3567,7 +3567,7 @@ _ विसृज्य गङ्गातनयं मम प्रियं
 महामन्त्रस्य।
 
 वेदव्यासो भगवान् ऋषीः- अनुष्टुप्छंदः।
-भगवान् श्री महाविष्णुर्देवता।
+भगवान् श्री-महाविष्णुर्देवता।
 श्रीरङ्गशायेतिबीजम्।
 श्रीकान्त इति शक्तिः।
 श्रीप्रद इति कीलकम्।
